--- a/src/Tickets/Ticket/Ticket.css
+++ b/src/Tickets/Ticket/Ticket.css
@@ -5,3 +5,34 @@
     padding: 20px;
     margin-top: 20px;
 }
+
+.ticket .ticket-price {
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 24px;
+    color: #2196F3;
+}
+
+.ticket img {
+    max-width: 110px;
+}
+
+.ticket .trip-title,
+.ticket .trip-value {
+    text-transform: uppercase;
+    font-weight: 600;
+    margin-bottom: 0;
+}
+
+.ticket .trip-title {
+    font-size: 12px;
+    line-height: 18px;
+    letter-spacing: 0.5px;
+    color: #A0B0B9;
+}
+
+.ticket .trip-value {
+    font-size: 14px;
+    line-height: 21px;
+    color: #4A4A4A;
+}
